# src/main/resources/openapi/documentation.yaml
@@ -1019,11 +1019,16 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/TicketDTO"
-  /tickets/{eventId}/search:
+  /tickets/{eventId}/{status}/search:
     post:
       description: ""
       parameters:
       - name: "eventId"
+        in: "path"
+        required: true
+        schema:
+          type: "string"
+      - name: "status"
         in: "path"
         required: true
         schema:
